	- fix: avoid segfault using --prefix until ewt fixes.
	- add --define "%foo %bar" option.
	- dump macros to same fd as --showrc uses.
	- add %GNUconfigure for full-blown package regeneration.
	- fix: RPM_ARCH/RPM_OS had wrong values.
	- fix: create ppc directories correctly.
	- (re-)enable fixowner/fixgroup macros.
	- fix: specfile BuildRoot was masking rpmrc macro.

2.91 -> 2.92
	- update with libtool-2.4f.
	- DU 4.0D fiddles (Shing-Gene Yung<shing@cz3.nus.edu.sg>)
	- change support@redhat.com to rpm-list@redhat.com.
	- fix: with --target=i686, pass macro %_arch=i386.
	- fix: rpm --target=arch ... resurrected.
	- fix: rpm -q --specfile --specedit now works even with BuildArch:.
	- fix: nested strtok's is a no-no.
	- added disk space checking

2.90 -> 2.91
	- fix: memory leaks in rpmRunTransactions plugged.
	- fix: build of packages w/o BuildRoot segfault.
	- permit substitution of I18N strings from PO meta-catalogues.
	- add callbacks for installer updates while doing URL xfers.
	- resurrect http queries/verifies.
	- create rpmbzio.c to avoid implicit dependence on libbz2 for installer.
	- spec files can provide /filename now
	- added rpmdbOpenForTraversal()
	- proxy http (Alex deVries).
	- add BuildPrereq: in spec file and src rpm.
	- added rpmtransSetScriptFd()
	- fixed config file problems during chroot upgrades
	- fixed %attr brokenness for directories
	- augment linux provides/requires for glibc 2.1 backward compatibility.
	- fixed --noscript, --notriggers, --excludedocs, and a bunch
	  of other install/remove flags
	- fixed noreplace handling
	- complain about old packages being installed

2.5.x -> 2.90
	- added --excludepath
	- identify missing keys by type (Toshio Kuratomi).
	- package install/removal much smarter about symlinks
	- redid install/remove API to allow transaction semantics
	- support for GPG (Toshio Kuratomi <badger@prtr-13.ucsc.edu>)
	- file lookup finally sane wrt symbolic links :-)